finalised functionality of application

--- a/memeMe_iOS/memeMe_iOS/Info.plist
+++ b/memeMe_iOS/memeMe_iOS/Info.plist
@@ -59,6 +59,8 @@
 	<string>Application needs to access the camera to allow users to take pictures, save them and use them to create their own meme.</string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>Application needs to access the media library to allow users to select pictures and use them to create their own meme.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Application needs to access the photo library to allow users to select pictures and user them to create their own meme as well as share these images by saving them into the photolibrary.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
